--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -7,6 +7,7 @@
 
 body {
   background-color: #000000;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .moving-grid {
@@ -37,6 +38,11 @@ body {
   font-size: 45px;
   min-width: 350px;
   margin: 13px 
+}
+
+.title {
+  text-shadow: 4px 0px 4px rgb(238, 238, 238);
+  letter-spacing: 7px;
 }
 
 .intake-form {
@@ -94,11 +100,13 @@ body {
   z-index: 1;
   border: 2px solid #0d3f27;
   width: 75%;
-  height: 40px;
+  height: 45px;
   margin: 15px 13%; 
   color: white;
   background: #166f45;
-  font-size: 20px;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 500;
+  font-size: 22px;
 }
 
 .round-one-background {
