Add file setup for domUpdates

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -109,8 +109,8 @@ body {
   font-size: 22px;
 }
 
-.round-one-background {
-  background-image: url("../images/tron-esque.jpg");
+.round-one {
+  background-image: url("../images/round-one.jpg");
   visibility: hidden
 }
 
