Add grid base for round one in html

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -114,6 +114,13 @@ body {
   visibility: hidden
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  min-height: 50vh;
+}
+
 
   
   
