--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -120,23 +120,28 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  min-height: 50vh;
-  min-width: 50vw;
+  min-height: 60vh;
+  min-width: 60vw;
   color: white;
   border: 2px solid white;
   position: absolute;
   align-items: center;
   text-align: center;
+  margin-top: 5%;
 }
 
 .round-one-foreground {
   z-index: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .grid-item {
+  display: flex;
   justify-self: center;
   align-items: center;
   border: solid 2px white;
   min-width: 100%;
   min-height: 100%;
+  padding: 5%;
 }
