Adds population of data to the game board

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -138,7 +138,7 @@ body {
 
 .grid-item {
   display: flex;
-  justify-self: center;
+  justify-content: center;
   align-items: center;
   border: solid 2px white;
   min-width: 100%;
