Add opacity and border to picked card

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -158,8 +158,7 @@ label {
 }
 
 .picked {
-  background-color: #3c0955;
-  border: none;
+  background-color: #70129e;
   opacity: 0.8;
   padding: 18px;
 }
