Add player names dynamically to know whose turn it is

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -359,3 +359,13 @@ h3 {
   text-shadow: 1px 1px 2px $player-one-color, 0 0 1em $player-two-color, 0 0 0.2em $player-three-color;
 }
 
+.player-guess-container {
+  color: white;
+}
+
+.winner {
+color: white;
+font-weight: 900;
+font-size: 5em;
+}
+
