--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -138,7 +138,7 @@ label {
   font-size: 1.1em;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-  margin-top: 3%;
+  margin-top: 1%;
   position: absolute;
   text-align: center;
   width: 96%;
@@ -174,15 +174,12 @@ label {
 
 .grid-transition {
   background-image: linear-gradient(to right, #463a74, #852D91, #580a48, #26afa8);
-
-  // background-color: black;
   cursor: pointer;
   transform: scale(1.1);
   transition: all .1s ease-in-out;
 }
 
 .clue-info {
-  // animation: clue-pop 1s;
   background-image: linear-gradient(to right, #463a74, #852D91, #580a48, #26afa8);
   box-shadow: 0 4px 15px 0 rgba(42, 9, 57, 0.75);
   color: white;
@@ -335,18 +332,23 @@ label {
   z-index: 10;
 }
 
+.round-title {
+  color: white;
+  display: inline-block;
+  font-size: 2em;
+  margin: 2% 0 0 3%;
+}
+
 .reset-game-btn {
-  background-color: #2ad1bf;
+  background-color: #e82d7f;
   border-radius: 30px;
-  border: 1px solid #072a26;
+  filter: drop-shadow(3px 6px 6px #e82d7f);
   font-weight: 900;
-  height: 4%;
-  margin-top: 5px;
-  opacity: .7;
-  padding: 3px;
+  height: 15%;
   position: absolute;
-  right: 89%;
-  width: 9%;
+  left: 101%;
+  bottom: 249%;
+  width: 12%;
 }
 
 h3 {
@@ -361,8 +363,8 @@ h3 {
 }
 
 .winner {
-color: white;
-font-weight: 900;
-font-size: 5em;
+  color: white;
+  font-weight: 900;
+  font-size: 5em;
 }
 
