Resize daily double so player can see their score while entering wager

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -5,6 +5,9 @@ $player-three-color: #13F607;
 $hover-glow-p1: 0px 6px 0px $player-one-color, 0 0 2em whitesmoke, 0 0 1em rgb(200,24, 129);
 $hover-glow-p2: 0px 6px 0px $player-two-color, 0 0 2em whitesmoke, 0 0 1em rgb(10, 147, 172);
 $hover-glow-p3: 0px 6px 0px $player-three-color, 0 0 2em whitesmoke, 0 0 1em rgb(8, 104, 24);
+$hover-glow-guess: 0px 6px 0px #2F0F52, 0 0 2em whitesmoke, 0 0 1em #4C427F;
+$daily-double-glow: 1px 1px 2px #b51981, 0 0 1em #5BE5FF, 0 0 0.2em #13F607;
+
 
 
 
