--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -216,7 +216,7 @@ label {
 .daily-double {
   @extend .clue-info;
   padding: 9%;
-  max-height: 82%;
+  max-height: 96%;
 }
 
 .clue-pop {
@@ -393,6 +393,7 @@ label {
 .category-third-round {
   color: white;
   font-size: 1.5em;
+  z-index: 10;
 }
 
 .player-guess-container {
@@ -455,6 +456,7 @@ h3 {
   color: white;
   font-weight: 900;
   font-size: 5em;
+  margin-top: 5%;
 }
 
 .round-3-info {
